SERVER-72450 $or with regex to $in rewrite depends on terms order

Make the $or->$in rewrite indepent on the place where a regex appears in the $or.
Add tests to ensure the rewrite is order-independent.