jstests/core/query/or/or_to_in.js
@@ -25,25 +25,20 @@ function compareValues(v1, v2) {
 }
 
 // Check that 'expectedQuery' and 'actualQuery' have the same plans, and produce the same result.
-function assertEquivPlanAndResult(expectedQuery, actualQuery, supportWithCollation) {
+function assertEquivPlanAndResult(expectedQuery, actualQuery) {
     const expectedExplain = coll.find(expectedQuery).explain("queryPlanner");
     const actualExplain = coll.find(actualQuery).explain("queryPlanner");
 
     // The queries must be rewritten into the same form.
     assert.docEq(expectedExplain.queryPlanner.parsedQuery, actualExplain.queryPlanner.parsedQuery);
 
-    // We are always running these queries to ensure a server crash is not triggered.
-    // TODO SERVER-72450: Add appropriate assertions for the output.
+    // Check if the test queries produce the same plans with collations
     const expectedExplainCollation =
         coll.find(expectedQuery).sort({f1: 1}).collation({locale: 'en_US'}).explain("queryPlanner");
     const actualExplainCollation =
         coll.find(actualQuery).sort({f1: 1}).collation({locale: 'en_US'}).explain("queryPlanner");
-
-    if (supportWithCollation) {
-        // Check if the test queries produce the same plans with collations.
-        assert.docEq(expectedExplainCollation.queryPlanner.parsedQuery,
-                     actualExplainCollation.queryPlanner.parsedQuery);
-    }
+    assert.docEq(expectedExplainCollation.queryPlanner.parsedQuery,
+                 actualExplainCollation.queryPlanner.parsedQuery);
 
     // Make sure both queries have the same access plan.
     const expectedPlan = getWinningPlan(expectedExplain.queryPlanner);
@@ -99,71 +94,37 @@ assert.commandWorked(coll.insert(data));
 
 // Pairs of queries where the first one is expressed via OR (which is supposed to be
 // rewritten as IN), and the second one is an equivalent query using IN.
-//
-// The third element of the array is optional, if present, implies that the rewrite is not
-// supported when there is a collation involved.
-//
-// TODO SERVER-72450: Remove or update this logic related to collation, and enforce stronger
-// assertions.
 const positiveTestQueries = [
-    {actualQuery: {$or: [{f1: 5}, {f1: 3}, {f1: 7}]}, expectedQuery: {f1: {$in: [7, 3, 5]}}},
-    {
-        actualQuery: {$or: [{f1: {$eq: 5}}, {f1: {$eq: 3}}, {f1: {$eq: 7}}]},
-        expectedQuery: {f1: {$in: [7, 3, 5]}}
-    },
-    {
-        actualQuery: {$or: [{f1: 42}, {f1: NaN}, {f1: 99}]},
-        expectedQuery: {f1: {$in: [42, NaN, 99]}}
-    },
-    {
-        actualQuery: {$or: [{f1: /^x/}, {f1: "ab"}]},
-        expectedQuery: {f1: {$in: [/^x/, "ab"]}},
-        cannotRewriteWithCollation: true
-    },
-    {
-        actualQuery: {$or: [{f1: /^x/}, {f1: "^a"}]},
-        expectedQuery: {f1: {$in: [/^x/, "^a"]}},
-        cannotRewriteWithCollation: true
-    },
-    {
-        actualQuery: {$or: [{f1: 42}, {f1: null}, {f1: 99}]},
-        expectedQuery: {f1: {$in: [42, 99, null]}}
-    },
-    {
-        actualQuery: {$or: [{f1: 1}, {f2: 9}, {f1: 99}]},
-        expectedQuery: {$or: [{f2: 9}, {f1: {$in: [1, 99]}}]}
-    },
-    {
-        actualQuery: {$or: [{f1: {$regex: /^x/}}, {f1: {$regex: /ab/}}]},
-        expectedQuery: {f1: {$in: [/^x/, /ab/]}}
-    },
-    {
-        actualQuery:
-            {$and: [{$or: [{f1: 7}, {f1: 3}, {f1: 5}]}, {$or: [{f1: 1}, {f1: 2}, {f1: 3}]}]},
-        expectedQuery: {$and: [{f1: {$in: [7, 3, 5]}}, {f1: {$in: [1, 2, 3]}}]}
-    },
-    {
-        actualQuery:
-            {$or: [{$or: [{f1: 7}, {f1: 3}, {f1: 5}]}, {$or: [{f1: 1}, {f1: 2}, {f1: 3}]}]},
-        expectedQuery: {$or: [{f1: {$in: [7, 3, 5]}}, {f1: {$in: [1, 2, 3]}}]}
-    },
-    {
-        actualQuery:
-            {$or: [{$and: [{f1: 7}, {f2: 7}, {f1: 5}]}, {$or: [{f1: 1}, {f1: 2}, {f1: 3}]}]},
-        expectedQuery: {$or: [{$and: [{f1: 7}, {f2: 7}, {f1: 5}]}, {f1: {$in: [1, 2, 3]}}]},
-    },
-    {
-        actualQuery: {$or: [{f2: [32, 52]}, {f2: [42, [13, 11]]}]},
-        expectedQuery: {f2: {$in: [[32, 52], [42, [13, 11]]]}}
-    },
-    {actualQuery: {$or: [{f2: 52}, {f2: 13}]}, expectedQuery: {f2: {$in: [52, 13]}}},
-    {actualQuery: {$or: [{f2: [11]}, {f2: [23]}]}, expectedQuery: {f2: {$in: [[11], [23]]}}},
-    {actualQuery: {$or: [{f1: 42}, {f1: null}]}, expectedQuery: {f1: {$in: [42, null]}}},
-    {
-        actualQuery: {$or: [{f1: "a"}, {f1: "b"}, {f1: /c/}]},
-        expectedQuery: {f1: {$in: ["a", "b", /c/]}},
-        cannotRewriteWithCollation: true
-    },
+    [{$or: [{f1: 5}, {f1: 3}, {f1: 7}]}, {f1: {$in: [7, 3, 5]}}],
+    [{$or: [{f1: {$eq: 5}}, {f1: {$eq: 3}}, {f1: {$eq: 7}}]}, {f1: {$in: [7, 3, 5]}}],
+    [{$or: [{f1: 42}, {f1: NaN}, {f1: 99}]}, {f1: {$in: [42, NaN, 99]}}],
+    [{$or: [{f1: /^x/}, {f1: "ab"}]}, {f1: {$in: [/^x/, "ab"]}}],
+    // The OR above should produce the same plan for any order of its arguments
+    [{$or: [{f1: /^x/}, {f1: "ab"}]}, {$or: [{f1: "ab"}, {f1: /^x/}]}],
+    [{$or: [{f1: /^x/}, {f1: "^a"}]}, {f1: {$in: [/^x/, "^a"]}}],
+    [{$or: [{f1: 42}, {f1: null}, {f1: 99}]}, {f1: {$in: [42, 99, null]}}],
+    [{$or: [{f1: 1}, {f2: 9}, {f1: 99}]}, {$or: [{f2: 9}, {f1: {$in: [1, 99]}}]}],
+    [{$or: [{f1: {$regex: /^x/}}, {f1: {$regex: /ab/}}]}, {f1: {$in: [/^x/, /ab/]}}],
+    [
+        {$and: [{$or: [{f1: 7}, {f1: 3}, {f1: 5}]}, {$or: [{f1: 1}, {f1: 2}, {f1: 3}]}]},
+        {$and: [{f1: {$in: [7, 3, 5]}}, {f1: {$in: [1, 2, 3]}}]}
+    ],
+    [
+        {$or: [{$or: [{f1: 7}, {f1: 3}, {f1: 5}]}, {$or: [{f1: 1}, {f1: 2}, {f1: 3}]}]},
+        {$or: [{f1: {$in: [7, 3, 5]}}, {f1: {$in: [1, 2, 3]}}]}
+    ],
+    [
+        {$or: [{$and: [{f1: 7}, {f2: 7}, {f1: 5}]}, {$or: [{f1: 1}, {f1: 2}, {f1: 3}]}]},
+        {$or: [{$and: [{f1: 7}, {f2: 7}, {f1: 5}]}, {f1: {$in: [1, 2, 3]}}]},
+    ],
+    [{$or: [{f2: [32, 52]}, {f2: [42, [13, 11]]}]}, {f2: {$in: [[32, 52], [42, [13, 11]]]}}],
+    [{$or: [{f2: 52}, {f2: 13}]}, {f2: {$in: [52, 13]}}],
+    [{$or: [{f2: [11]}, {f2: [23]}]}, {f2: {$in: [[11], [23]]}}],
+    [{$or: [{f1: 42}, {f1: null}]}, {f1: {$in: [42, null]}}],
+    [{$or: [{f1: "a"}, {f1: "b"}, {f1: /c/}]}, {f1: {$in: ["a", "b", /c/]}}],
+    // The OR above should produce the same plan for any order of its arguments
+    [{$or: [{f1: "a"}, {f1: "b"}, {f1: /c/}]}, {$or: [{f1: /c/}, {f1: "a"}, {f1: "b"}]}],
+    [{$or: [{f1: "a"}, {f1: "b"}, {f1: /c/}]}, {$or: [{f1: "a"}, {f1: /c/}, {f1: "b"}]}],
 ];
 
 // These $or queries should not be rewritten into $in because of different semantics.
@@ -177,27 +138,22 @@ for (const query of negativeTestQueries) {
     assertOrNotRewrittenToIn(query);
 }
 
-function testOrToIn(queries, usesCollation) {
+function testOrToIn(queries) {
     for (const queryPair of queries) {
-        if (usesCollation && queryPair.cannotRewriteWithCollation) {
-            continue;
-        }
-        assertEquivPlanAndResult(
-            queryPair.actualQuery, queryPair.expectedQuery, !queryPair.cannotRewriteWithCollation);
+        assertEquivPlanAndResult(queryPair[0], queryPair[1]);
     }
 }
 
-testOrToIn(positiveTestQueries, false /* usesCollation */);  // test without indexes
+testOrToIn(positiveTestQueries);  // test without indexes
 
 assert.commandWorked(coll.createIndex({f1: 1}));
 
-testOrToIn(positiveTestQueries, false /* usesCollation */);  // single index
+testOrToIn(positiveTestQueries);  // single index
 
 assert.commandWorked(coll.createIndex({f2: 1}));
 assert.commandWorked(coll.createIndex({f1: 1, f2: 1}));
 
-testOrToIn(positiveTestQueries,
-           false /* usesCollation */);  // three indexes, requires multiplanning
+testOrToIn(positiveTestQueries);  // three indexes, requires multiplanning
 
 // Test with a collection that has a collation, and that collation is the same as the query
 // collation
@@ -205,12 +161,12 @@ coll.drop();
 assert.commandWorked(db.createCollection("orToIn", {collation: {locale: 'en_US'}}));
 coll = db.orToIn;
 assert.commandWorked(coll.insert(data));
-testOrToIn(positiveTestQueries, true /* usesCollation */);
+testOrToIn(positiveTestQueries);
 // Test with a collection that has a collation, and that collation is different from the query
 // collation
 coll.drop();
 assert.commandWorked(db.createCollection("orToIn", {collation: {locale: 'de'}}));
 coll = db.orToIn;
 assert.commandWorked(coll.insert(data));
-testOrToIn(positiveTestQueries, true /* usesCollation */);
+testOrToIn(positiveTestQueries);
 }());
